# TensorPlay

./: .gitignore  404.html  BingSiteAuth.xml  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  TensorPlay.py  baidu_verify_codeva-AhyreL7IDE.html  demo.py  environment.yml  hashmap.json  index.html  native_functions.yaml  privacy.html  pyproject.toml  pytest.ini  rebuild.py  release.py  requirements.txt  robots.txt  setup.py  sitemap.xml  subscribe.html  try.py  unsubscribe-error.html  unsubscribe-success.html  vercel.json
TensorPlay/: __init__.py  core.py  data.py  func.py  initializer.py  layer.py  module.py  operator.py  optimizer.py  utils.py
about/: index.html
alpha/: README.md
api/: _C.html  _reduction.html  activation.html  adagrad.html  adam.html  adamw.html  alexnet.html  amp.html  audio.html  autocast_mode.html  autograd.html  backend.html  backends.html  batchnorm.html  collate.html  common_types.html  comparison.html  container.html  conv.html  cpp.html  cpu.html  cuda.html  data.html  dataloader.html  dataset.html  datasets.html  dropout.html  flatten.html  folder.html  function.html  functional.html  grad_mode.html  grad_scaler.html  hooks.html  hub.html  index.html  init.html  instancenorm.html  io.html  lazy.html  (+33 more)
assets/: CHANGELOG.md.BUIkw7Qb.js  CHANGELOG.md.BUIkw7Qb.lean.js  CHANGELOG.md.BjgyldP3.js  CHANGELOG.md.BjgyldP3.lean.js  CHANGELOG.md.CfqvsU-D.js  CHANGELOG.md.CfqvsU-D.lean.js  CONTRIBUTING.md.D8ZfsEom.js  CONTRIBUTING.md.D8ZfsEom.lean.js  CONTRIBUTING.md._wut4jFO.js  CONTRIBUTING.md._wut4jFO.lean.js  CONTRIBUTING.md.reV6tBNP.js  CONTRIBUTING.md.reV6tBNP.lean.js  about_index.md.CIIINTJo.js  about_index.md.CIIINTJo.lean.js  about_index.md.CivpnJLS.js  about_index.md.CivpnJLS.lean.js  about_index.md.D9dXnE2q.js  about_index.md.D9dXnE2q.lean.js  api__C.md.C_J0EWHA.js  api__C.md.C_J0EWHA.lean.js  api__C.md.CqosplcF.js  api__C.md.CqosplcF.lean.js  api__C.md.Qv-Y0wjX.js  api__C.md.Qv-Y0wjX.lean.js  api__reduction.md.4CT0Th-w.js  api__reduction.md.4CT0Th-w.lean.js  api__reduction.md.CcQTGa52.js  api__reduction.md.CcQTGa52.lean.js  api__reduction.md.rW4mwTRL.js  api__reduction.md.rW4mwTRL.lean.js  api_activation.md.BGBcfbA_.js  api_activation.md.BGBcfbA_.lean.js  api_activation.md.D6ga1LTB.js  api_activation.md.D6ga1LTB.lean.js  api_activation.md.DBJWtw-_.js  api_activation.md.DBJWtw-_.lean.js  api_adagrad.md.7fEiNcol.js  api_adagrad.md.7fEiNcol.lean.js  api_adagrad.md.DLbERoZa.js  api_adagrad.md.DLbERoZa.lean.js  (+1151 more)
benchmark/: benchmark_conv_comprehensive.py  benchmark_dataloader.py  benchmark_mm.py  benchmark_tensorplay.py  benchmark_torch.py
blog/: index.html
cmake/: TensorPlayCustomOp.cmake
community/: index.html
config/: derivatives.yaml  native_functions.yaml
debug/: debug_tensor.cpp
demo/: KRK_classify.py
docs/: CUSTOM_OP_SYSTEM.md  OPERATOR_REGISTRATION.md
ecosystem/: index.html
example/: KRK_calssify.py  moon_classify.py
guide/: architecture.html  getting-started.html  install.html  quickstart.html  resources.html  tutorials.html  what-is-tensorplay.html
join/: index.html
nn/: CMakeLists.txt
nn/include/tensorplay/nn/: Export.h  Init.h
nn/src/: Init.cpp
p10/: CMakeLists.txt
p10/include/: Allocator.h  DType.h  DataPtr.h  Device.h  DispatchKey.h  Dispatcher.h  Exception.h  Generator.h  Macros.h  OneDNNContext.h  Scalar.h  SizesAndStrides.h  Stacktrace.h  Storage.h  StorageImpl.h  StructuredKernel.h  Tensor.h  TensorImpl.h  TypePromotion.h  Utils.h  VariableVersion.h  dlpack_types.h
p10/src/: Allocator.cpp  Device.cpp  Dispatcher.cpp  Exception.cpp  Generator.cpp  OneDNNContext.cpp  Scalar.cpp  SizesAndStrides.cpp  Stacktrace.cpp  Tensor.cpp  TensorImpl.cpp
p10/src/backend/cpu/: ArithmeticKernels.cpp  ComparisonKernels.cpp  ConvKernels.cpp  CopyKernels.cpp  FactoryKernels.cpp  LinearAlgebraKernels.cpp  LossKernels.cpp  NormalizationKernels.cpp  PadKernels.cpp  PointwiseKernels.cpp  PoolingKernels.cpp  RandomKernels.cpp  ReductionKernels.cpp  ViewKernels.cpp
p10/src/backend/cuda/: ActivationKernels.cu  ArithmeticKernels.cu  CUDAAllocator.cpp  CUDAContext.cpp  CUDAContext.h  CUDNNUtils.h  ConvKernels.cu  CopyKernels.cu  EmbeddingKernels.cu  FactoryKernels.cu  LinearAlgebraKernels.cu  LossKernels.cu  PointwiseKernels.cu  PoolingKernels.cu  RandomKernels.cu  ReductionKernels.cu  ViewKernels.cu
privacy/: index.html
stax/: CMakeLists.txt
stax/include/: Export.h  Fusion.h  Graph.h  Macros.h
stax/include/tensorplay/stax/: Export.h  Init.h
stax/src/: Fusion.cpp  Graph.cpp  Init.cpp
subscribe/: index.html
tensorplay/: _C.cp313-win_amd64.pyd  _C.exp  _C.lib  _C.pyi  __config__.py  __init__.py  _appdirs.py  _classes.py  _docs.py  _utils.py  cuda.py  device.py  dtype.py  functional.py  hub.py  multiprocessing.py  scalar.py  serialization.py  tensor.py  tensorplay_core.exp  tensorplay_core.lib
test/: benchmark_mm.py  conftest.py  demo.py  test_autograd_engine.py  test_broadcast.py  test_conv_full.py  test_conv_padding.py  test_cpu_precision.py  test_cuda.py  test_cuda_backward.py  test_cuda_ops.py  test_cuda_pointwise.py  test_cuda_reductions.py  test_device.py  test_grad.py  test_higher_order.py  test_indexing.py  test_init.py  test_linear_init.py  test_max_min.py  test_mm_3.py  test_new_features.py  test_new_layers.py  test_new_ops.py  test_numpy_robustness.py  test_op_parity.py  test_ops.py  test_optim.py  test_optimizations.py  test_parameter.py  test_pointwise.py  test_python_tensor.py  test_random.py  test_random_inplace.py  test_reduction.py  test_scalar_tensor_ops.py  test_statistical.py  test_strided_add.py  test_t_autograd.py  test_tensor_py_features.py  (+3 more)
tests/: __init__.py  test_layer.py  test_tensor_basic.py  try.py
tpx/: CMakeLists.txt
tpx/include/: AccumulateGrad.h  Autograd.h  AutogradMetaInterface.h  AutogradNodes.h  Edge.h  Engine.h  ManualNodes.h  Node.h  TPXTensor.h
tpx/src/: Autograd.cpp  AutogradMetaInterface.cpp  Engine.cpp  Tensor.cpp
zh/: CHANGELOG.html  CONTRIBUTING.html  index.html  privacy.html  (+1 more)
(+294 files in other folders)
